[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Interface_scenes/TouchControls.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/global/FPS_lable.gd" type="Script" id=2]
[ext_resource path="res://sprites/Interface/ui_buttons/pause.png" type="Texture" id=6]
[ext_resource path="res://scripts/Interface/Game_HUD.gd" type="Script" id=7]
[ext_resource path="res://sprites/Interface/ui_buttons/retry.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Interface_scenes/btn_theme_style.tres" type="StyleBox" id=9]
[ext_resource path="res://Fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://sprites/Interface/checkbox/checkbox_normal.png" type="Texture" id=11]
[ext_resource path="res://sprites/Interface/checkbox/checkbox_pressed.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 10
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 10 )

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[sub_resource type="CircleShape2D" id=3]
radius = 64.0

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 0 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=5]
size = 10
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Game_HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_Lable" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchControls" parent="." instance=ExtResource( 1 )]

[node name="Pause" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_btn" type="TouchScreenButton" parent="Pause"]
modulate = Color( 1, 1, 1, 0.537255 )
position = Vector2( -29, 14 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 6 )
shape = SubResource( 2 )
action = "pause"

[node name="Retry" type="Control" parent="."]
margin_right = 10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry_btn" type="TouchScreenButton" parent="Retry"]
modulate = Color( 1, 1, 1, 0.537255 )
position = Vector2( 29, 14 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 8 )
shape = SubResource( 3 )

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PauseOverlay"]
margin_left = 20.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 40.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="PauseOverlay"]
margin_left = 20.0
margin_top = 44.0
margin_right = 52.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mainmenu" type="Button" parent="PauseOverlay"]
margin_left = 20.0
margin_top = 68.0
margin_right = 63.0
margin_bottom = 88.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxMusic" type="CheckBox" parent="PauseOverlay"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -52.0
margin_top = 48.0
margin_right = -20.0
margin_bottom = 72.0
custom_icons/radio_checked = ExtResource( 12 )
custom_icons/checked = ExtResource( 12 )
custom_icons/radio_unchecked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 11 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxSFX" type="CheckBox" parent="PauseOverlay"]
margin_left = 20.0
margin_top = 96.0
margin_right = 54.0
margin_bottom = 120.0
custom_icons/radio_checked = ExtResource( 12 )
custom_icons/checked = ExtResource( 12 )
custom_icons/radio_unchecked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 11 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 7 )
[connection signal="released" from="Retry/retry_btn" to="." method="_on_retry_btn_released"]
[connection signal="pressed" from="PauseOverlay/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseOverlay/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PauseOverlay/Mainmenu" to="." method="_on_Mainmenu_pressed"]
[connection signal="pressed" from="PauseOverlay/CheckBoxMusic" to="." method="_on_CheckBoxMusic_pressed"]
[connection signal="pressed" from="PauseOverlay/CheckBoxSFX" to="." method="_on_CheckBoxSFX_pressed"]
